# LearnOpenGL

./: .clangd  CMakeLists.txt  camera.cpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_buffer.hpp  window.cpp  window.hpp
dependencies/scripts/: CMakeLists.txt  run.sh
shaders/: fragment.glsl  vertex.glsl
src/: camera.hpp  index_buffer.cpp  index_buffer.hpp  main.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  window.cpp  window.hpp
